# the-vault

./: .cursorrules  .gitignore  .windsurfrules  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  SETUP_COMPLETE.md  init_prompt.MD  the-vault-design-spec.html  the-vault-project-setup.html
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.windsurf/: rules
backend/: .coveragerc  .env.example  README.md  final_report_v10.txt  final_report_v11.txt  final_report_v12.txt  final_report_v13.txt  final_report_v14.txt  final_report_v15.txt  final_report_v2.txt  final_report_v3.txt  final_report_v4.txt  final_report_v5.txt  final_report_v6.txt  final_report_v7.txt  final_report_v8.txt  final_report_v9.txt  pyproject.toml  requirements.txt
backend/tests/: __init__.py  conftest.py  test_advanced_coverage.py  test_api.py  test_coverage_db_final.py  test_coverage_extractors.py  test_coverage_extractors_extra.py  test_coverage_final_push.py  test_coverage_gap_closure.py  test_coverage_gaps.py  test_coverage_repositories.py  test_coverage_scanner.py  test_coverage_scanner_extra.py  test_coverage_symbol_utils.py  test_coverage_symbols.py  test_coverage_watcher.py  test_crawler.py  test_mission_coverage.py  test_parser.py  test_parsing_service.py  test_storage.py  test_watcher.py
backend/vault/: __init__.py  config.py  exceptions.py  main.py
backend/vault/api/: __init__.py  indexer.py  projects.py  schemas.py  symbols.py
backend/vault/crawler/: __init__.py  fingerprint.py  scanner.py  watcher.py
backend/vault/parser/: __init__.py  extractors.py  symbol_types.py  tree_sitter_parser.py
backend/vault/storage/: __init__.py  database.py  models.py  repositories.py
docs/decisions/: 002-qdrant-vs-chroma.md
